feat(cluster-scanner): enable eve by default [SSPROD-37253]

--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -33,7 +33,7 @@ tests:
           value: kube-system
       - equal:
           path: data.eve_enabled
-          value: "false"
+          value: "true"
       - equal:
           path: data.eve_integration_enabled
           value: "false"
