--- a/charts/agent/tests/gke_test.yaml
+++ b/charts/agent/tests/gke_test.yaml
@@ -106,6 +106,45 @@ tests:
               enabled: false
     template: templates/configmap.yaml
 
+  - it: Ensure promscrape_web_address is set 127.0.0.1:9991 when autopilot is enabled
+    set:
+      gke:
+        autopilot: true
+    asserts:
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            promscrape_web_address: 127.0.0.1:9991
+    template: templates/configmap.yaml
+
+  - it: Ensure promscrape_web_address is unaltered when is set on settings and autopilot is enabled
+    set:
+      gke:
+        autopilot: true
+      sysdig:
+        settings:
+          promscrape_web_address: test:1234
+    asserts:
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            promscrape_web_address: test:1234
+    template: templates/configmap.yaml
+
+  - it: Ensure promscrape_web_address is unaltered when autopilot is disabled
+    set:
+      gke:
+        autopilot: false
+      sysdig:
+        settings:
+          promscrape_web_address: test:1234
+    asserts:
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            promscrape_web_address: test:1234
+    template: templates/configmap.yaml
+
   - it: Ensure ephemeral storage is set correctly on kmod container when slim mode is enabled
     set:
       gke:
