feat: Deployment annotations and fix label render issue
feat: Bump chart version and update README.md

fix indentation

Co-authored-by: Marco Vito Moscaritolo <mavimo@gmail.com>

fix new line issue with the template

bump chart version and fix readme indentation

update sysdig-deploy chart dependency

feat(cluster-scanner): added support for NATS JS TLS encryption (#1630)

--- a/charts/kspm-collector/templates/deployment.yaml
+++ b/charts/kspm-collector/templates/deployment.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     app.kubernetes.io/name: {{ include "kspmCollector.name" . }}
 {{ include "kspmCollector.labels" . | indent 4 }}
+  {{- with .Values.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
@@ -16,11 +20,11 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: {{ include "kspmCollector.name" . }}
+        {{- include "kspmCollector.labels" . | nindent 8 }}
       {{- with .Values.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-{{ include "kspmCollector.labels" . | indent 8 }}
     spec:
       serviceAccountName: {{ template "kspmCollector.serviceAccountName" .}}
       securityContext:
