update KSPM collector to v1.38.0-rc and KSPM analyzer to v1.41.0-rc

--- a/charts/kspm-collector/values.yaml
+++ b/charts/kspm-collector/values.yaml
@@ -77,7 +77,7 @@ clusterName: ""
 
 image:
   repository: sysdig/kspm-collector
-  tag: 1.37.1
+  tag: 1.38.0-rc
   digest:
   registry: quay.io
   pullPolicy:
