--- a/charts/kspm-collector/values.yaml
+++ b/charts/kspm-collector/values.yaml
@@ -77,7 +77,7 @@ clusterName: ""
 
 image:
   repository: sysdig/kspm-collector
-  tag: 1.38.0-rc
+  tag: 1.38.0
   digest:
   registry: quay.io
   pullPolicy:
