feat(admission-controller): enable VM checks for admission webhook component

--- a/charts/admission-controller/tests/admissioncontrollerconfigmap_test.yaml
+++ b/charts/admission-controller/tests/admissioncontrollerconfigmap_test.yaml
@@ -18,6 +18,8 @@ tests:
   - it: Creates the clusterrole if webhook.acConfig is present
     set:
       webhook:
+        vm:
+          enabled: false
         acConfig: |
           foo: bar
           fizz: buzz
@@ -33,11 +35,27 @@ tests:
           path: rules[1]
           content:
             apiGroups: [ "" ]
-            resources: [ "pods", "configmaps", "secrets" ]
+            resources: [ "pods", "configmaps", "secrets"]
+            verbs: [ "get" ]
+        template: templates/webhook/clusterrole.yaml
+  - it: contains VM RBAC additions when enabled
+    set:
+      webhook:
+        vm:
+          enabled: true
+    asserts:
+      - isSubset:
+          path: rules[1]
+          content:
+            apiGroups: [ "" ]
+            resources: [ "pods", "secrets", "serviceaccounts", "namespaces"]
             verbs: [ "get" ]
         template: templates/webhook/clusterrole.yaml
   - it: Does not create the configmap if webhook.acConfig is not present
-    set: {}
+    set:
+      webhook:
+        vm:
+          enabled: false
     asserts:
       - notContains:
           path: rules
