--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -42,3 +42,12 @@ data:
   WORKERS: "2"
   WORKER_VERIFYSSL: "true"
   {{- end}}
+  {{- if (.Values.webhook.vm).enabled }}
+  PLUGINS_VM_ENRICHER_IMAGEMETADATA: "{}"
+  PLUGINS_VM_ENRICHER_K8S_LABELS: "{}"
+  PLUGINS_VM_EXECUTOR_EXTRACT_SBOM: |-
+    {
+      "rsiHost": {{ .Values.webhook.vm.clusterScannerEndpoint | default "clusterscanner-cluster-scanner:9999" | quote }},
+      "insecure": true
+    }
+  {{- end }}
