Add dnsPolicy for node-analyzer
  Since `hostNetworking` is set to `true`, it is a recommended[1] to
  explicitly set the `dnsPolicy` to `ClusterFirstWithHostNet`. Failing
  to do this defaults `dnsPolicy` to `ClusterFirst` which could
  unintended consqeuences in terms of dns resolution.

[1] https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy

--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -148,6 +148,7 @@ spec:
       # Use the Host Network Namespace.
       # This is required by the Benchmark and the HostScanner containers to determine the hostname and host mac address
       hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
       {{- end }}
       {{- if include "nodeAnalyzer.useHostPID" . }}
       # Use the Host PID namespace.
