--- a/charts/sysdig-deploy/Chart.yaml
+++ b/charts/sysdig-deploy/Chart.yaml
@@ -50,7 +50,7 @@ dependencies:
     repository: file://../kspm-collector
     version: ~0.14.0
     alias: kspmCollector
-    condition: global.kspm.deploy
+    condition: kspmCollector.enabled,global.kspm.deploy
   - name: rapid-response
     # repository: https://charts.sysdig.com
     repository: file://../rapid-response
