--- a/charts/sysdig-deploy/Chart.yaml
+++ b/charts/sysdig-deploy/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: sysdig-deploy
 description: A chart with various Sysdig components for Kubernetes
 type: application
-version: 1.43.0
+version: 1.44.0
 maintainers:
   - name: AlbertoBarba
     email: alberto.barba@sysdig.com
@@ -50,7 +50,7 @@ dependencies:
     repository: file://../kspm-collector
     version: ~0.14.0
     alias: kspmCollector
-    condition: global.kspm.deploy
+    condition: kspmCollector.enabled,global.kspm.deploy
   - name: rapid-response
     # repository: https://charts.sysdig.com
     repository: file://../rapid-response
