--- a/charts/kspm-collector/templates/deployment.yaml
+++ b/charts/kspm-collector/templates/deployment.yaml
@@ -173,6 +173,12 @@ spec:
                 key: nats_max_reconnect
                 name: {{ template "kspmCollector.fullname" . }}
                 optional: true
+          - name: NATS_MAX_RECONNECT_FAILURES
+            valueFrom:
+              configMapKeyRef:
+                key: nats_max_reconnect_failures
+                name: {{ template "kspmCollector.fullname" . }}
+                optional: true
           - name: AGENT_PORT
             valueFrom:
               configMapKeyRef:
