--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -259,6 +259,12 @@ spec:
                 name: {{ .Release.Name }}-kspm-analyzer
                 key: nats_max_reconnect
                 optional: true
+          - name: NATS_MAX_RECONNECT_FAILURES
+            valueFrom:
+              configMapKeyRef:
+                name: {{ .Release.Name }}-kspm-analyzer
+                key: nats_max_reconnect_failures
+                optional: true
           {{- if .Values.global.sysdig.tags }}
           - name: TAGS
             value: {{ include "agent.tags" . }}
