feat(admission-controller): set dnsPolicy when we allow hostNetwork in the pod

--- a/charts/admission-controller/templates/webhook/deployment.yaml
+++ b/charts/admission-controller/templates/webhook/deployment.yaml
@@ -47,6 +47,7 @@ spec:
         {{- end }}
       {{- if .Values.webhook.hostNetwork }}
       hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
       {{- end }}
       containers:
       {{- if .Values.features.kspmAdmissionController}}
