--- a/charts/kspm-collector/templates/deployment.yaml
+++ b/charts/kspm-collector/templates/deployment.yaml
@@ -157,6 +157,12 @@ spec:
                 key: no_proxy
                 name: {{ template "kspmCollector.fullname" . }}
                 optional: true
+          - name: TLS_SKIP_VERIFY
+            valueFrom:
+              configMapKeyRef:
+                key: nats_insecure
+                name: {{ template "kspmCollector.fullname" . }}
+                optional: true
           - name: NATS_INSECURE
             valueFrom:
               configMapKeyRef:
@@ -181,6 +187,8 @@ spec:
           {{- end }}
           {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
           - name: SSL_CERT_FILE
+            value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl) -}}
+          - name: TLS_CA_PATHS
             value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl) -}}
           {{- end }}
         volumeMounts:
