--- a/charts/registry-scanner/Chart.yaml
+++ b/charts/registry-scanner/Chart.yaml
@@ -4,7 +4,7 @@ description: Sysdig Registry Scanner
 type: application
 home: https://www.sysdig.com/
 icon: https://avatars.githubusercontent.com/u/5068817?s=200&v=4
-version: 1.1.33
-appVersion: 0.2.67
+version: 1.1.34
+appVersion: 0.2.68-rc2
 maintainers:
   - name: sysdiglabs
