feat(node-analyzer,kspm-collector): Skip TLS certificate verification when using TLS Proxy & bump applications version (#1665)
Signed-off-by: Daniele De Lorenzi <daniele.delorenzi@sysdig.com>
Co-authored-by: lior-alafi-work <113354782+lior-alafi-work@users.noreply.github.com>

--- a/charts/kspm-collector/templates/deployment.yaml
+++ b/charts/kspm-collector/templates/deployment.yaml
@@ -161,6 +161,12 @@ spec:
                 key: no_proxy
                 name: {{ template "kspmCollector.fullname" . }}
                 optional: true
+          - name: TLS_SKIP_VERIFY
+            valueFrom:
+              configMapKeyRef:
+                key: nats_insecure
+                name: {{ template "kspmCollector.fullname" . }}
+                optional: true
           - name: NATS_INSECURE
             valueFrom:
               configMapKeyRef:
@@ -191,6 +197,10 @@ spec:
           {{- end }}
           {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
           - name: SSL_CERT_FILE
+            value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl) -}}
+          {{- end }}
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
+          - name: TLS_CA_PATHS
             value: /ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl) -}}
           {{- end }}
         volumeMounts:
