--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -47,7 +47,7 @@ data:
   PLUGINS_VM_ENRICHER_K8S_LABELS: "{}"
   PLUGINS_VM_EXECUTOR_EXTRACT_SBOM: |-
     {
-      "rsiHost": {{ .Values.webhook.vm.clusterScannerEndpoint | quote }},
+      "rsiHost": {{ include "admissionController.webhook.vmClusterScannerEndpoint" . | quote }},
       "insecure": true
     }
   {{- end }}
